--- a/app/views/body/home-page/mixins/unit.pug
+++ b/app/views/body/home-page/mixins/unit.pug
@@ -14,6 +14,6 @@ mixin unit(obj)
             for btn in obj.buttons
                 if btn.locationStyles.length
                     div(class=btn.locationStyles)
-                        input.button&attributes({"class": btn.btnStyles})(type="button", value= btn.caption)
+                        input.button(class=btn.btnStyles)(type="button", value= btn.caption)
                 else
-                    input.button&attributes({"class": btn.btnStyles})(type="button", value= btn.caption)
+                    input.button(class=btn.btnStyles)(type="button", value= btn.caption)
