Рефакторинг. Добавлен отдельный файл для unit в котором есть две кнопки для скроллинга и поле с информацией между ними.

--- a/app/views/body/home-page/home-page-data.pug
+++ b/app/views/body/home-page/home-page-data.pug
@@ -30,5 +30,14 @@
             hrLine: false,
             article:"",
             buttons:[]
+        },
+
+        {
+            unitType: "twoBtnScroll",
+
+            mainInfoValue:"01",
+            supInfoValue:"/03",
+
+            bgColor: "unit--theme-info"
         }
     ];
