--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -7,9 +7,13 @@ div.main.main--theme-white-gr
             include home-page-data
             //Миксины для блока
             include mixins/unit
+            include mixins/unitScrollingButtons
 
             for unitItem in unitsListData
-                +unit(unitItem)
+                if unitItem.unitType === "twoBtnScroll"
+                    +unitScrollingButtons(unitItem)
+                else
+                    +unit(unitItem)
 
             //div.unit.unit--horizontal-double-unit.unit--theme-yellow
             //    h2.unit__title.unit__title--big-bold.unit__title--big-width.unit__title--black-text building the world around us
@@ -20,18 +24,18 @@ div.main.main--theme-white-gr
 
             //div.unit
 
-            div.unit.unit--theme-info
-                div.unit__button-arrow-wrap
-                    button.button.button--theme-arrow.button--arrow-next
-                        div.icon.icon--arrow-next-inside
-
-                div.unit__info-wrap
-                    span.unit__info.unit__info--big-regular.unit__info--letter-spacing4.unit__info--black-text 01
-                    span.unit__info.unit__info--supper.unit__info--medium-regular.unit__info--letter-spacing2.unit__info--black-text /03
-
-                div.unit__button-arrow-wrap
-                    button.button.button--theme-arrow.button--arrow-prev
-                        div.icon.icon--arrow-prev-inside
+            //div.unit.unit--theme-info
+            //    div.unit__button-arrow-wrap
+            //        button.button.button--theme-arrow.button--arrow-next
+            //            div.icon.icon--arrow-next-inside
+            //
+            //    div.unit__info-wrap
+            //        span.unit__info.unit__info--big-regular.unit__info--letter-spacing4.unit__info--black-text 01
+            //        span.unit__info.unit__info--supper.unit__info--medium-regular.unit__info--letter-spacing2.unit__info--black-text /03
+            //
+            //    div.unit__button-arrow-wrap
+            //        button.button.button--theme-arrow.button--arrow-prev
+            //            div.icon.icon--arrow-prev-inside
 
             div.unit
 
