Рефакторинг. Добавлен отдельный файл для unit в котором большая кнопка с иконкой и информацией под ней

--- a/app/views/body/home-page/home-page-data.pug
+++ b/app/views/body/home-page/home-page-data.pug
@@ -39,5 +39,38 @@
             supInfoValue:"/03",
 
             bgColor: "unit--theme-info"
+        },
+
+        {
+            title:"",
+            hrLine: false,
+            article:"",
+            buttons:[]
+        },
+
+        {
+            title:"",
+            hrLine: false,
+            article:"",
+            buttons:[]
+        },
+
+        {
+            unitType: "iconButton",
+            btnStyleLayer0: [
+                "icon--theme-circle",
+                "icon--blue-bg"
+            ],
+            btnStyleLayer1:["icon--theme-circle-bg"],
+            btnStyleLayer2:["icon--theme-play-arrow"],
+            locationStyles:["unit__company-video-wrap"],
+            infoValue: "Company video",
+            infoStyle: [
+                "unit__info--small-regular",
+                "unit__info--letter-spacing03",
+                "unit__info--white-text",
+                "unit__info--uppercase"
+            ],
+            bgColor: "unit--theme-blue"
         }
     ];
