--- a/app/views/body/home-page/home-page-data.pug
+++ b/app/views/body/home-page/home-page-data.pug
@@ -72,5 +72,24 @@
                 "unit__info--uppercase"
             ],
             bgColor: "unit--theme-blue"
+        },
+
+        {
+            title:"",
+            hrLine: false,
+            article:"",
+            buttons:[]
+        },
+        {
+            title:"Our services",
+            titleStyles: [
+                "unit__title--big-bold",
+                "unit__title--med-width",
+                "unit__title--black-text"
+            ],
+            hrLine: true,
+            article: "Our mission is to provide the highest level of service for our client-partners from concept through construction.",
+            articleStyles:["unit__article--gray-text"],
+            buttons:[]
         }
     ];
