--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -52,12 +52,12 @@ div.main.main--theme-white-gr
             //
             //        span.unit__info.unit__info--small-regular.unit__info--letter-spacing03.unit__info--white-text.unit__info--uppercase Company video
 
-            div.unit
+            //div.unit
 
-            div.unit.unit--theme-info
-                h2.unit__title.unit__title--big-bold.unit__title--med-width.unit__title--black-text Our services
-                hr.unit__horizontal.unit__horizontal--black-solid
-                p.unit__article.unit__article--gray-text Our mission is to provide the highest level of service for our client-partners from concept through construction.
+            //div.unit.unit--theme-info
+            //    h2.unit__title.unit__title--big-bold.unit__title--med-width.unit__title--black-text Our services
+            //    hr.unit__horizontal.unit__horizontal--black-solid
+            //    p.unit__article.unit__article--gray-text Our mission is to provide the highest level of service for our client-partners from concept through construction.
 
 
             div.unit.unit--bg-layer-unit.unit--theme-foto
