--- a/app/views/body/home-page/home-page-data.pug
+++ b/app/views/body/home-page/home-page-data.pug
@@ -91,5 +91,12 @@
             article: "Our mission is to provide the highest level of service for our client-partners from concept through construction.",
             articleStyles:["unit__article--gray-text"],
             buttons:[]
+        },
+
+        {
+            unitType: "foto",
+            unitLayer: ["unit--bg-layer-unit"],
+            unitLayerFoto: "unit__picture--theme-contr",
+            bgColor: "unit--theme-foto"
         }
     ];
