Рефакторинг. Добавлен отдельный файл для unit в котором есть стрелка

--- a/app/views/body/home-page/home-page-data.pug
+++ b/app/views/body/home-page/home-page-data.pug
@@ -98,5 +98,21 @@
             unitLayer: ["unit--bg-layer-unit"],
             unitLayerFoto: "unit__picture--theme-contr",
             bgColor: "unit--theme-foto"
+        },
+
+        {
+            unitType: "arrow",
+            unitLayer: "unit--bg-layer-unit",
+            title:"General Contracting",
+            titleStyles: [
+                "unit__title--med-bold",
+                "unit__title--med-width-h3",
+                "unit__title--black-text"
+            ],
+            hrLine: true,
+            article: "This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.",
+            articleStyles:["unit__article--gray-text"],
+            arrowStyle: "unit__arrow--left",
+            bgColor: "unit--theme-info"
         }
     ];
