--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -10,6 +10,7 @@ div.main.main--theme-white-gr
             include mixins/unitScrollingButtons
             include mixins/unitIconButton
             include mixins/unitFoto
+            include mixins/unitWithArrow
 
             for unitItem in unitsListData
                 if unitItem.unitType === "twoBtnScroll"
@@ -18,6 +19,8 @@ div.main.main--theme-white-gr
                     +unitIconButton(unitItem)
                 else if unitItem.unitType === "foto"
                     +unitFoto(unitItem)
+                else if unitItem.unitType === "arrow"
+                    +unitWithArrow(unitItem)
                 else
                     +unit(unitItem)
 
@@ -66,12 +69,12 @@ div.main.main--theme-white-gr
             //div.unit.unit--bg-layer-unit.unit--theme-foto
             //    div.unit__picture--theme-contr
 
-            div.unit.unit--bg-layer-unit
-                div.unit.unit--theme-info
-                    h3.unit__title.unit__title--med-bold.unit__title--med-width-h3.unit__title--black-text General Contracting
-                    hr.unit__horizontal.unit__horizontal--black-solid
-                    p.unit__article.unit__article--gray-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
-                div.unit__arrow.unit__arrow--left
+            //div.unit.unit--bg-layer-unit
+            //    div.unit.unit--theme-info
+            //        h3.unit__title.unit__title--med-bold.unit__title--med-width-h3.unit__title--black-text General Contracting
+            //        hr.unit__horizontal.unit__horizontal--black-solid
+            //        p.unit__article.unit__article--gray-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
+            //    div.unit__arrow.unit__arrow--left
 
             div.unit.unit--bg-layer-unit.unit--theme-foto
                 div.unit__picture--theme-capital
