Рефакторинг unitScrollingButtons для возможности стилизации елементов.

--- a/app/views/body/home-page/home-page-data.pug
+++ b/app/views/body/home-page/home-page-data.pug
@@ -34,10 +34,32 @@
 
         {
             unitType: "twoBtnScroll",
+            btnNextLayer0:[
+                "button--theme-arrow",
+                "button--arrow-next"
+            ],
+            btnNextLayer1:"icon--arrow-next-inside",
 
             mainInfoValue:"01",
+            mainInfoStyles:[
+                "unit__info--big-regular",
+                "unit__info--letter-spacing4",
+                "unit__info--black-text"
+            ],
+            supInfoSlash:"",
             supInfoValue:"/03",
+            supInfoStyles:[
+                "unit__info--supper",
+                "unit__info--medium-regular",
+                "unit__info--letter-spacing2",
+                "unit__info--black-text"
+            ],
 
+            btnPrevLayer0:[
+                "button--theme-arrow",
+                "button--arrow-prev"
+            ],
+            btnPrevLayer1:"icon--arrow-prev-inside",
             bgColor: "unit--theme-info"
         },
 
@@ -113,6 +135,53 @@
             article: "This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.",
             articleStyles:["unit__article--gray-text"],
             arrowStyle: "unit__arrow--left",
+            bgColor: "unit--theme-info"
+        },
+
+        {
+            unitType: "foto",
+            unitLayer: ["unit--bg-layer-unit"],
+            unitLayerFoto: "unit__picture--theme-capital",
+            bgColor: "unit--theme-foto"
+        },
+
+        {
+            unitType: "twoBtnScroll",
+
+            fixPaddingTop:["unit__fix-padding-unit-with-arrow-hower"],
+
+            btnNextLayer0:[
+            "button--theme-arrow",
+            "button--arrow-next"
+            ],
+            btnNextLayer1:"icon--arrow-next-inside",
+
+            mainInfoValue:"03",
+            mainInfoStyles:[
+                "unit__info--big-regular",
+                "unit__info--fix-right-margin4",
+                "unit__info--black-text",
+                "unit__info--letter-spacing1"
+            ],
+            supInfoSlash:"/",
+            slashStyles:[
+                "unit__info--supper",
+                "unit__info--medium-regular",
+                "unit__info--black-text",
+                "unit__info--left-right-margin5"
+            ],
+            supInfoValue:"06",
+            supInfoStyles:[
+                "unit__info--supper",
+                "unit__info--medium-regular",
+                "unit__info--black-text"
+            ],
+
+            btnPrevLayer0:[
+                "button--theme-arrow",
+                "button--arrow-prev-hover"
+            ],
+            btnPrevLayer1:"icon--arrow-prev-inside",
             bgColor: "unit--theme-info"
         }
     ];
