--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -76,23 +76,23 @@ div.main.main--theme-white-gr
             //        p.unit__article.unit__article--gray-text This allows the Design and Engineering team to originate drawings, specifications, structural calculations, details and scopes of work that deliver exactly what the client had intended to achieve.
             //    div.unit__arrow.unit__arrow--left
 
-            div.unit.unit--bg-layer-unit.unit--theme-foto
-                div.unit__picture--theme-capital
+            //div.unit.unit--bg-layer-unit.unit--theme-foto
+            //    div.unit__picture--theme-capital
 
-            div.unit.unit--theme-info
-                div.unit__fix-padding-unit-with-arrow-hower
-                div.unit__button-arrow-wrap
-                    button.button.button--theme-arrow.button--arrow-next
-                        div.icon.icon--arrow-next-inside
-
-                div.unit__info-wrap
-                    span.unit__info.unit__info--big-regular.unit__info--fix-right-margin4.unit__info--black-text.unit__info--letter-spacing1 03
-                    span.unit__info.unit__info--supper.unit__info--medium-regular.unit__info--black-text.unit__info--left-right-margin5 /
-                    span.unit__info.unit__info--supper.unit__info--medium-regular.unit__info--black-text 06
-
-                div.unit__button-arrow-wrap
-                    button.button.button--theme-arrow.button--arrow-prev-hover
-                        div.icon.icon--arrow-prev-inside
+            //div.unit.unit--theme-info
+            //    div.unit__fix-padding-unit-with-arrow-hower
+            //    div.unit__button-arrow-wrap
+            //        button.button.button--theme-arrow.button--arrow-next
+            //            div.icon.icon--arrow-next-inside
+            //
+            //    div.unit__info-wrap
+            //        span.unit__info.unit__info--big-regular.unit__info--fix-right-margin4.unit__info--black-text.unit__info--letter-spacing1 03
+            //        span.unit__info.unit__info--supper.unit__info--medium-regular.unit__info--black-text.unit__info--left-right-margin5 /
+            //        span.unit__info.unit__info--supper.unit__info--medium-regular.unit__info--black-text 06
+            //
+            //    div.unit__button-arrow-wrap
+            //        button.button.button--theme-arrow.button--arrow-prev-hover
+            //            div.icon.icon--arrow-prev-inside
 
             div.unit.unit--bg-layer-unit
                 div.unit.unit--white
