Рефакторинг. Добавлен отдельный файл для unitIcon который показывает иконку по центру блока и поле с информацией. Добален контент для наполнения блоков

--- a/app/views/body/home-page/home-page-data.pug
+++ b/app/views/body/home-page/home-page-data.pug
@@ -183,5 +183,85 @@
             ],
             btnPrevLayer1:"icon--arrow-prev-inside",
             bgColor: "unit--theme-info"
+        },
+
+        {
+            unitType: "arrow",
+            unitLayer: "unit--bg-layer-unit",
+            title:"Project design and engineering",
+            titleStyles: [
+                "unit__title--med-bold",
+                "unit__title--med-width-h3",
+                "unit__title--black-text"
+            ],
+            hrLine: true,
+            article: "Through Stage-Gate, Design and Engineering methodology, DMCS ensure client-partners realize clearly defined project objective to achieve intended results.",
+            articleStyles:["unit__article--gray-text"],
+            arrowStyle: "unit__arrow--right",
+            bgColor: "unit--theme-info"
+        },
+
+        {
+            unitType: "foto",
+            unitLayer: ["unit--bg-layer-unit"],
+            unitLayerFoto: "unit__picture--theme-desing",
+            bgColor: "unit--theme-foto"
+        },
+
+        {
+            unitType: "arrow",
+            unitLayer: "unit--bg-layer-unit",
+            title:"Capital improvements",
+            titleStyles: [
+            "unit__title--med-bold",
+            "unit__title--med-width-h3",
+            "unit__title--black-text"
+            ],
+            hrLine: true,
+            article: "This results in scope creep and slippage of the schedule that ultimately result in additional costs to the owner.",
+            articleStyles:["unit__article--gray-text"],
+            arrowStyle: "unit__arrow--up",
+            bgColor: "unit--theme-info"
+        },
+
+        {
+            unitType: "icon",
+            icons:[
+                {
+                    iconLayer0: "icon--theme-pdf"
+                }
+            ],
+            locationStyles:["unit__download-price-wrap"],
+            infoValue: "Download price",
+            infoStyle: [
+            "unit__info--small-regular",
+            "unit__info--letter-spacing03",
+            "unit__info--black-text",
+            "unit__info--uppercase"
+            ],
+            bgColor: "unit--theme-yellow"
+        },
+
+        {
+            unitType: "icon",
+            icons:[
+                {
+                    iconLayer0: "icon--theme-contact-circle",
+                    iconLayer1: "icon--theme-contact-circle-bg"
+                },
+                {
+                    iconLayer0: "icon--theme-play-arrow-down"
+                }
+            ],
+            locationStyles:["unit__contact-us-wrap"],
+            infoValue: "Contact us",
+            infoStyle: [
+            "unit__info--small-regular",
+            "unit__info--letter-spacing03",
+            "unit__info--white-text",
+            "unit__info--uppercase"
+            ],
+            bgColor: "unit--theme-blue"
         }
+
     ];
