--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -11,6 +11,7 @@ div.main.main--theme-white-gr
             include mixins/unitIconButton
             include mixins/unitFoto
             include mixins/unitWithArrow
+            include mixins/unitIcon
 
             for unitItem in unitsListData
                 if unitItem.unitType === "twoBtnScroll"
@@ -21,6 +22,8 @@ div.main.main--theme-white-gr
                     +unitFoto(unitItem)
                 else if unitItem.unitType === "arrow"
                     +unitWithArrow(unitItem)
+                else if unitItem.unitType === "icon"
+                    +unitIcon(unitItem)
                 else
                     +unit(unitItem)
 
@@ -94,34 +97,34 @@ div.main.main--theme-white-gr
             //        button.button.button--theme-arrow.button--arrow-prev-hover
             //            div.icon.icon--arrow-prev-inside
 
-            div.unit.unit--bg-layer-unit
-                div.unit.unit--white
-                    h3.unit__title.unit__title--med-bold.unit__title--med-width-h3.unit__title--black-text Project design and engineering
-                    hr.unit__horizontal.unit__horizontal--black-solid
-                    p.unit__article.unit__article--gray-text Through Stage-Gate, Design and Engineering methodology, DMCS ensure client-partners realize clearly defined project objective to achieve intended results.
-                div.unit__arrow.unit__arrow--right
+            //div.unit.unit--bg-layer-unit
+            //    div.unit.unit--white
+            //        h3.unit__title.unit__title--med-bold.unit__title--med-width-h3.unit__title--black-text Project design and engineering
+            //        hr.unit__horizontal.unit__horizontal--black-solid
+            //        p.unit__article.unit__article--gray-text Through Stage-Gate, Design and Engineering methodology, DMCS ensure client-partners realize clearly defined project objective to achieve intended results.
+            //    div.unit__arrow.unit__arrow--right
 
-            div.unit.unit--bg-layer-unit.unit--theme-foto
-                div.unit__picture--theme-desing
+            //div.unit.unit--bg-layer-unit.unit--theme-foto
+            //    div.unit__picture--theme-desing
 
-            div.unit.unit--bg-layer-unit
-                div.unit.unit--white
-                    h3.unit__title.unit__title--med-bold.unit__title--med-width-h3.unit__title--black-text Capital improvements
-                    hr.unit__horizontal.unit__horizontal--black-solid
-                    p.unit__article.unit__article--gray-text This results in scope creep and slippage of the schedule that ultimately result in additional costs to the owner.
-                div.unit__arrow.unit__arrow--up
+            //div.unit.unit--bg-layer-unit
+            //    div.unit.unit--white
+            //        h3.unit__title.unit__title--med-bold.unit__title--med-width-h3.unit__title--black-text Capital improvements
+            //        hr.unit__horizontal.unit__horizontal--black-solid
+            //        p.unit__article.unit__article--gray-text This results in scope creep and slippage of the schedule that ultimately result in additional costs to the owner.
+            //    div.unit__arrow.unit__arrow--up
 
-            div.unit.unit--theme-yellow
-                div.unit__download-price-wrap
-                    div.icon.icon--theme-pdf
-                    span.unit__info.unit__info--small-regular.unit__info--letter-spacing03.unit__info--black-text.unit__info--uppercase Download price
+            //div.unit.unit--theme-yellow
+            //    div.unit__download-price-wrap
+            //        div.icon.icon--theme-pdf
+            //        span.unit__info.unit__info--small-regular.unit__info--letter-spacing03.unit__info--black-text.unit__info--uppercase Download price
 
-            div.unit.unit--theme-blue
-                div.unit__contact-us-wrap
-                    div.icon.icon--theme-contact-circle
-                        div.icon.icon--theme-contact-circle-bg
-                    div.icon.icon--theme-play-arrow-down
-                    span.unit__info.unit__info--small-regular.unit__info--letter-spacing03.unit__info--white-text.unit__info--uppercase Contact us
+            //div.unit.unit--theme-blue
+            //    div.unit__contact-us-wrap
+            //        div.icon.icon--theme-contact-circle
+            //            div.icon.icon--theme-contact-circle-bg
+            //        div.icon.icon--theme-play-arrow-down
+            //        span.unit__info.unit__info--small-regular.unit__info--letter-spacing03.unit__info--white-text.unit__info--uppercase Contact us
 
             div.unit.unit--bg-layer-unit
                 div.unit.unit--bg-unit-width959.unit--dark-grey
