Рефакторинг. Добавлен отдельный файл для unit с формой поиска и возможностью добавить картинку на фоне

--- a/app/views/body/home-page/home-page-data.pug
+++ b/app/views/body/home-page/home-page-data.pug
@@ -262,6 +262,25 @@
             "unit__info--uppercase"
             ],
             bgColor: "unit--theme-blue"
+        },
+
+        {
+            unitType: "searchWithBg",
+            unitLayer:"unit--bg-layer-unit",
+            unitLayerFoto:"unit--bg-unit-width959",
+            unitFoto:"unit__picture--theme-what",
+            unitGeometry:"unit--horizontal-double-unit",
+            locationStyles:["unit__form-search-wrap"],
+            inputSearchValue: "What you're looking for",
+            inputStyles:[
+                "form__input--theme-unit-search",
+                "form__input--border-bottom-only",
+                "form__input--border-white"
+            ],
+            buttonStyles: [
+                "form__button--right-button",
+                "form__button--theme-search-button"
+            ]
         }
 
     ];
