--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -12,6 +12,7 @@ div.main.main--theme-white-gr
             include mixins/unitFoto
             include mixins/unitWithArrow
             include mixins/unitIcon
+            include mixins/unitSearchWithBg
 
             for unitItem in unitsListData
                 if unitItem.unitType === "twoBtnScroll"
@@ -24,6 +25,8 @@ div.main.main--theme-white-gr
                     +unitWithArrow(unitItem)
                 else if unitItem.unitType === "icon"
                     +unitIcon(unitItem)
+                else if unitItem.unitType === "searchWithBg"
+                    +unitSearchWithBg(unitItem)
                 else
                     +unit(unitItem)
 
@@ -126,15 +129,15 @@ div.main.main--theme-white-gr
             //        div.icon.icon--theme-play-arrow-down
             //        span.unit__info.unit__info--small-regular.unit__info--letter-spacing03.unit__info--white-text.unit__info--uppercase Contact us
 
-            div.unit.unit--bg-layer-unit
-                div.unit.unit--bg-unit-width959.unit--dark-grey
-                    div.unit__picture--theme-what
-                div.unit.unit--horizontal-double-unit.unit--transparent
-                    div.unit__form-search-wrap
-                        form.form
-                            input.form__input.form__input--theme-unit-search.form__input--border-bottom-only.form__input--border-white(type="text", name="search-text", value="What you're looking for")
-                            button.form__button.form__button--right-button.form__button--theme-search-button
-                                i.form__button-icon(class="fa fa-search", aria-hidden="true")
+            //div.unit.unit--bg-layer-unit
+            //    div.unit.unit--bg-unit-width959.unit--dark-grey
+            //        div.unit__picture--theme-what
+            //    div.unit.unit--horizontal-double-unit.unit--transparent
+            //        div.unit__form-search-wrap
+            //            form.form
+            //                input.form__input.form__input--theme-unit-search.form__input--border-bottom-only.form__input--border-white(type="text", name="search-text", value="What you're looking for")
+            //                button.form__button.form__button--right-button.form__button--theme-search-button
+            //                    i.form__button-icon(class="fa fa-search", aria-hidden="true")
 
             div.unit.unit--horizontal-double-unit.unit--white
                 div.unit__person-info-wrap
