Рефакторинг. Добавлен отдельный файл для unit с аватаром, райтингом и комментарием пользователя

--- a/app/views/body/home-page/home-page-data.pug
+++ b/app/views/body/home-page/home-page-data.pug
@@ -281,6 +281,28 @@
                 "form__button--right-button",
                 "form__button--theme-search-button"
             ]
+        },
+        {
+            unitType: "personPost",
+            unitGeometry:"unit--horizontal-double-unit",
+            locationStyles:["unit__person-info-wrap"],
+            avatar:"icon--person-avatar",
+            personInfoValue:"Martin H. Jhonsons",
+            personInfoStyles:[
+                "unit__info--norm-bold",
+                "unit__info--black-text"
+            ],
+            personRateLocationStyles:["unit__person-rate-inline-wrap"],
+            personRate:[
+                "icon--person-rate4",
+                "icon--person-rate1none"
+            ],
+            article: "Together, we'll couple our knowledge, expertise, and innovative capabilities with your astute knowledge of your business—to maximize and optimize results. This is all accomplished in a number of ways.",
+            articleStyles:[
+                "unit__article--centered-text",
+                "unit__article--gray-text"
+            ],
+            bgColor: "unit--white"
         }
 
     ];
