--- a/app/views/body/home-page/home-page-data.pug
+++ b/app/views/body/home-page/home-page-data.pug
@@ -303,6 +303,36 @@
                 "unit__article--gray-text"
             ],
             bgColor: "unit--white"
-        }
+        },
 
+        {
+            unitGeometry:"unit--horizontal-double-unit",
+            unitLayer:"unit--bg-layer-unit",
+            unitFoto:"unit__picture--theme-good-hands",
+            title:"Your building is in good hands",
+            titleStyles: [
+                "unit__title--big-bold",
+                "unit__title--big-width",
+                "unit__title--black-text",
+                "unit__title--fix-big-width"
+            ],
+            hrLine: true,
+            article: "Our mission is to provide the highest level of service for our client-partners from concept through construction.",
+            articleStyles:[
+                "unit__article--black-text",
+                "unit__article--fix-for-your-buildig-is"
+            ],
+            buttons:[
+            {
+            caption:"About company",
+            btnStyles:[
+                "button--theme-unit-btn",
+                "button--black-bg",
+                "button--text-white",
+                "button--fix-btn-about-company"
+            ],
+            locationStyles:[]
+            }
+            ]
+        }
     ];
