Рефакторинг. Добавлен контент для блока с аватаром, рэйтингом и комментарием пользователя. А также в миксин unitPersonPost внесены корректировки

--- a/app/views/body/home-page/home-page-data.pug
+++ b/app/views/body/home-page/home-page-data.pug
@@ -324,15 +324,55 @@
             ],
             buttons:[
             {
-            caption:"About company",
-            btnStyles:[
-                "button--theme-unit-btn",
-                "button--black-bg",
-                "button--text-white",
-                "button--fix-btn-about-company"
-            ],
-            locationStyles:[]
-            }
+                caption:"About company",
+                btnStyles:[
+                    "button--theme-unit-btn",
+                    "button--black-bg",
+                    "button--text-white",
+                    "button--fix-btn-about-company"
+                ],
+                locationStyles:[]
+                }
             ]
+        },
+
+        {
+            unitType: "personPost",
+            unitGeometry:"unit--horizontal-double-unit",
+            locationStyles:["unit__person-info-wrap"],
+            avatar:"icon--person-avatar",
+            personInfoValue:"Tony SH. Schults",
+            personInfoStyles:[
+                "unit__info--norm-bold",
+                "unit__info--black-text"
+            ],
+            personRateLocationStyles:["unit__person-rate-inline-wrap"],
+            personRate:[
+                "icon--person-rate5"
+            ],
+            article: "When selecting DMCS as the design-build team, clients benefit in terms of efficiency and continuity that translate into cost savings and optimized schedules. Contact us today and see how DMCS can best serve you from",
+            articleStyles:[
+                "unit__article--centered-text",
+                "unit__article--margin-top10",
+                "unit__article--grey-yellow-text"
+            ],
+            hrLines:[
+                {lineStyles:[
+                    "unit__horizontal--black-solid",
+                    "unit__horizontal--width-small",
+                    "unit__horizontal--opasity-half",
+                    "unit__horizontal--inline"
+                ]},
+                {lineStyles:[
+                    "unit__horizontal--black-solid",
+                    "unit__horizontal--width-small",
+                    "unit__horizontal--inline"
+                ]}
+            ],
+            hrLinesLocationStyles:[
+                "unit__horiz-inline-center-bottom-wrap"
+            ],
+            bgColor: "unit--soft-gold"
         }
+
     ];
