--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -160,18 +160,18 @@ div.main.main--theme-white-gr
             //        p.unit__article.unit__article--black-text.unit__article--fix-for-your-buildig-is Our mission is to provide the highest level of service for our client-partners from concept through construction.
             //        input.button.button--theme-unit-btn.button--black-bg.button--text-white.button--fix-btn-about-company(type="button", value="About company")
 
-            div.unit.unit--horizontal-double-unit.unit--soft-gold
-                div.unit__person-info-wrap
-                    div.icon.icon--person-avatar
-                    span.unit__info.unit__info--norm-bold.unit__info--black-text Tony SH. Schults
-                    div.unit__person-rate-inline-wrap
-                        div.icon.icon--person-rate5
-
-                p.unit__article.unit__article--centered-text.unit__article--margin-top10.unit__article--grey-yellow-text When selecting DMCS as the design-build team, clients benefit in terms of efficiency and continuity that translate into cost savings and optimized schedules. Contact us today and see how DMCS can best serve you from
-                //*concept-through-construction.*/
-                div.unit__horiz-inline-center-bottom-wrap
-                    hr.unit__horizontal.unit__horizontal--black-solid.unit__horizontal--width-small.unit__horizontal--opasity-half.unit__horizontal--inline
-                    hr.unit__horizontal.unit__horizontal--black-solid.unit__horizontal--width-small.unit__horizontal--inline
+            //div.unit.unit--horizontal-double-unit.unit--soft-gold
+            //    div.unit__person-info-wrap
+            //        div.icon.icon--person-avatar
+            //        span.unit__info.unit__info--norm-bold.unit__info--black-text Tony SH. Schults
+            //        div.unit__person-rate-inline-wrap
+            //            div.icon.icon--person-rate5
+            //
+            //    p.unit__article.unit__article--centered-text.unit__article--margin-top10.unit__article--grey-yellow-text When selecting DMCS as the design-build team, clients benefit in terms of efficiency and continuity that translate into cost savings and optimized schedules. Contact us today and see how DMCS can best serve you from
+            //    //*concept-through-construction.*/
+            //    div.unit__horiz-inline-center-bottom-wrap
+            //        hr.unit__horizontal.unit__horizontal--black-solid.unit__horizontal--width-small.unit__horizontal--opasity-half.unit__horizontal--inline
+            //        hr.unit__horizontal.unit__horizontal--black-solid.unit__horizontal--width-small.unit__horizontal--inline
 
             div.unit.unit--white
                 div.icon.icon--blue-square
