--- a/app/views/body/home-page/mixins/unitSearchWithBg.pug
+++ b/app/views/body/home-page/mixins/unitSearchWithBg.pug
@@ -5,6 +5,6 @@ mixin unitSearchWithBg(obj)
         .unit(class=obj.unitGeometry)
             div(class=obj.locationStyles)
                 form.form
-                    input.form__input(class=obj.inputStyles)(type="text", name="search-text", value= obj.inputSearchValue)
+                    input.form__input(class=obj.inputStyles, type="text", name="search-text", value= obj.inputSearchValue)
                     button.form__button(class=obj.buttonStyles)
                         i.form__button-icon(class="fa fa-search", aria-hidden="true")
