Рефакторинг. Добавлен отдельный файл для unit с иконкой в левом верхнем углу и статистикой

--- a/app/views/body/home-page/home-page-data.pug
+++ b/app/views/body/home-page/home-page-data.pug
@@ -373,6 +373,20 @@
                 "unit__horiz-inline-center-bottom-wrap"
             ],
             bgColor: "unit--soft-gold"
+        },
+
+        {
+            unitType:"iconStatistic",
+            icons:[
+                {
+                    iconLayer0: "icon--blue-square",
+                    iconLayer1: "icon--blue-square-bg",
+                    iconLayer2: "icon--ligthinig-blue"
+                }
+            ],
+            mainInfoValue: "55 000",
+            subInfoValue: "Expert Witness",
+            bgColor:"unit--white"
         }
 
     ];
