--- a/app/views/body/home-page/home-page.pug
+++ b/app/views/body/home-page/home-page.pug
@@ -14,6 +14,7 @@ div.main.main--theme-white-gr
             include mixins/unitIcon
             include mixins/unitSearchWithBg
             include mixins/unitPersonPost
+            include mixins/unitIconStatistic
 
             for unitItem in unitsListData
                 if unitItem.unitType === "twoBtnScroll"
@@ -30,6 +31,8 @@ div.main.main--theme-white-gr
                     +unitSearchWithBg(unitItem)
                 else if unitItem.unitType === "personPost"
                     +unitPersonPost(unitItem)
+                else if unitItem.unitType === "iconStatistic"
+                    +unitIconStatistic(unitItem)
                 else
                     +unit(unitItem)
 
@@ -173,12 +176,12 @@ div.main.main--theme-white-gr
             //        hr.unit__horizontal.unit__horizontal--black-solid.unit__horizontal--width-small.unit__horizontal--opasity-half.unit__horizontal--inline
             //        hr.unit__horizontal.unit__horizontal--black-solid.unit__horizontal--width-small.unit__horizontal--inline
 
-            div.unit.unit--white
-                div.icon.icon--blue-square
-                    div.icon.icon--blue-square-bg
-                        div.icon.icon--ligthinig-blue
-                span.unit__info.unit__info--block41.unit__info--big-regular.unit__info--letter-spacing2.unit__info--dark-grey-text 55 000
-                span.unit__info.unit__info--block.unit__info--norm-regular.unit__info--letter-spacing03.unit__info--grey-text Expert Witness
+            //div.unit.unit--white
+            //    div.icon.icon--blue-square
+            //        div.icon.icon--blue-square-bg
+            //            div.icon.icon--ligthinig-blue
+            //    span.unit__info.unit__info--block41.unit__info--big-regular.unit__info--letter-spacing2.unit__info--dark-grey-text 55 000
+            //    span.unit__info.unit__info--block.unit__info--norm-regular.unit__info--letter-spacing03.unit__info--grey-text Expert Witness
 
             div.unit.unit--theme-foto
                 div.icon.icon--blue-square
