Рефакторинг. Добавлен отдельный файл для unit с нововостным заголовком

--- a/app/views/body/home-page/home-page-data.pug
+++ b/app/views/body/home-page/home-page-data.pug
@@ -387,6 +387,29 @@
             mainInfoValue: "55 000",
             subInfoValue: "Expert Witness",
             bgColor:"unit--white"
+        },
+
+        {
+            unitType:"iconStatistic",
+            icons:[
+                {
+                    iconLayer0: "icon--blue-square",
+                    iconLayer1: ["icon--blue-square-bg", "icon--blue-square-bg--grey"],
+                    iconLayer2: "icon--raindrop"
+                    }
+            ],
+            mainInfoValue: "124 600",
+            subInfoValue: "Construction",
+            bgColor:"unit--theme-foto"
+        },
+
+        {
+            unitType: "news",
+            unitTitle:"News",
+            date:"12 february, 2015",
+            title:"Project Design and Engineering Services",
+            commentsCount: "23 comments",
+            bgColor:"unit--theme-blue"
         }
 
     ];
